--- a/Game-Project/package.json
+++ b/Game-Project/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.10.0",
     "tailwindcss": "^4.1.10",
     "vue": "^3.5.13",
+    "vue-multiselect": "^3.2.0",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
